feat: set up components

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -23,7 +23,9 @@
     "forceConsistentCasingInFileNames": true,
     "baseUrl": ".",
     "paths": {
-      "~/*": ["./app/*"]
+      "~/*": ["./app/*"],
+      "~/components": ["./app/components"],
+      "~/lib": ["./app/lib/*"],
     },
 
     // Vite takes care of building everything, not tsc.
