--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
     "cmdk": "^1.0.0",
+    "date-fns": "^3.6.0",
     "isbot": "^4.1.0",
     "react": "^18.2.0",
     "react-chartjs-2": "^5.2.0",
