--- a/.prettierrc.json
+++ b/.prettierrc.json
@@ -1,3 +1,7 @@
 {
-    "singleQuote": true
+  "singleQuote": true,
+  "plugins": [
+    "@trivago/prettier-plugin-sort-imports",
+    "prettier-plugin-tailwindcss"
+  ]
 }
