feat: show toast notification when entry is succesfully added

--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "date-fns": "^3.6.0",
     "framer-motion": "^11.2.10",
     "isbot": "^5.1.9",
+    "next-themes": "^0.3.0",
     "react": "^18.3.1",
     "react-chartjs-2": "^5.2.0",
     "react-day-picker": "^8.10.1",
@@ -36,6 +37,7 @@
     "react-use-measure": "^2.1.1",
     "remix-auth": "^3.7.0",
     "remix-auth-form": "^1.5.0",
+    "sonner": "^1.5.0",
     "tailwind-merge": "^2.3.0",
     "tailwindcss-animate": "^1.0.7"
   },
