--- a/tsconfig.json
+++ b/tsconfig.json
@@ -23,9 +23,9 @@
     "forceConsistentCasingInFileNames": true,
     "baseUrl": ".",
     "paths": {
-      "~/*": ["./app/*"],
-      "~/components": ["./app/components"],
-      "~/lib": ["./app/lib/*"],
+      "~/*": ["./src/*"],
+      "~/components": ["./src/components"],
+      "~/lib": ["./src/lib/*"],
     },
 
     // Vite takes care of building everything, not tsc.
