--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "@journeyapps/wa-sqlite": "^0.3.0",
+    "@powersync/react": "^1.4.0",
     "@powersync/web": "^1.6.0",
     "@prisma/client": "^5.15.0",
     "@radix-ui/react-checkbox": "^1.0.4",
@@ -24,6 +25,7 @@
     "@remix-run/node": "^2.9.2",
     "@remix-run/react": "^2.9.2",
     "@remix-run/serve": "^2.9.2",
+    "@supabase/supabase-js": "^2.45.2",
     "@tanstack/react-router": "^1.50.0",
     "chart.js": "^4.4.3",
     "class-variance-authority": "^0.7.0",
@@ -32,6 +34,7 @@
     "date-fns": "^3.6.0",
     "framer-motion": "^11.2.10",
     "isbot": "^5.1.9",
+    "js-logger": "^1.6.1",
     "next-themes": "^0.3.0",
     "react": "^18.3.1",
     "react-chartjs-2": "^5.2.0",
