--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "@powersync/kysely-driver": "^0.3.0",
     "@powersync/react": "^1.4.0",
     "@powersync/web": "^1.6.0",
-    "@prisma/client": "^5.15.0",
+    "@prisma/client": "^5.19.0",
     "@radix-ui/react-checkbox": "^1.0.4",
     "@radix-ui/react-dialog": "^1.0.5",
     "@radix-ui/react-icons": "^1.3.0",
@@ -46,7 +46,8 @@
     "remix-auth-form": "^1.5.0",
     "sonner": "^1.5.0",
     "tailwind-merge": "^2.3.0",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "uuid": "11.0.0-0"
   },
   "devDependencies": {
     "@ianvs/prettier-plugin-sort-imports": "^4.2.1",
@@ -68,7 +69,7 @@
     "postcss": "^8.4.38",
     "prettier": "^3.3.1",
     "prettier-plugin-tailwindcss": "^0.6.2",
-    "prisma": "^5.15.0",
+    "prisma": "^5.19.0",
     "tailwindcss": "^3.4.4",
     "typescript": "^5.4.5",
     "vite": "^5.2.13",
