--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,12 +1,5 @@
 {
-  "include": [
-    "**/*.ts",
-    "**/*.tsx"
-    // "**/.server/**/*.ts",
-    // "**/.server/**/*.tsx",
-    // "**/.client/**/*.ts",
-    // "**/.client/**/*.tsx"
-  ],
+  "include": ["**/*.ts", "**/*.tsx"],
   "compilerOptions": {
     "lib": ["DOM", "DOM.Iterable", "ES2023"],
     "types": ["vite/client"],
