--- a/packages/web/components.json
+++ b/packages/web/components.json
@@ -5,7 +5,7 @@
   "tsx": true,
   "tailwind": {
     "config": "tailwind.config.js",
-    "css": "app/tailwind.css",
+    "css": "tailwind.css",
     "baseColor": "slate",
     "cssVariables": true,
     "prefix": ""
