--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -7,7 +7,7 @@
   "scripts": {
     "build": "tsc -p tsconfig.json",
     "start": "node dist/index.js",
-    "dev": "tsx --watch src/index.ts"
+    "dev": "NODE_ENV=development tsx --watch src/index.ts"
   },
   "keywords": [],
   "author": "",
