fix: build error (tsconfig)

--- a/packages/web/tsconfig.json
+++ b/packages/web/tsconfig.json
@@ -1,10 +1,11 @@
 {
   "extends": "../../tsconfig.json",
-  "outDir": "dist",
   "compilerOptions": {
+    "outDir": "dist",
     "target": "ESNext",
     "module": "ESNext",
     "moduleResolution": "Bundler",
+    "lib": ["DOM", "DOM.Iterable", "ESNext"],
     "types": ["vite/client"],
     "strict": true,
     "skipLibCheck": true,
@@ -16,6 +17,11 @@
       "~/lib": ["./src/lib/*"]
     }
   },
-  "include": ["src/**/*", "postcss.config.js", "vite.config.ts", "tailwind.config.ts"],
+  "include": [
+    "src/**/*",
+    "postcss.config.js",
+    "vite.config.ts",
+    "tailwind.config.ts"
+  ],
   "noEmit": true
 }
