--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -27,6 +27,7 @@
     "@remix-run/react": "^2.9.2",
     "@remix-run/serve": "^2.9.2",
     "@supabase/supabase-js": "^2.45.2",
+    "@tanstack/react-form": "^0.33.0",
     "@tanstack/react-router": "^1.58.3",
     "chart.js": "^4.4.3",
     "class-variance-authority": "^0.7.0",
