refactor: remove unused dependencies, scope dependencies to package

--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -23,9 +23,6 @@
     "@radix-ui/react-popover": "^1.0.7",
     "@radix-ui/react-select": "^2.0.0",
     "@radix-ui/react-slot": "^1.0.2",
-    "@remix-run/node": "^2.9.2",
-    "@remix-run/react": "^2.9.2",
-    "@remix-run/serve": "^2.9.2",
     "@supabase/supabase-js": "^2.45.2",
     "@tanstack/react-form": "^0.33.0",
     "@tanstack/react-router": "^1.58.3",
@@ -35,23 +32,31 @@
     "cmdk": "^1.0.0",
     "date-fns": "^3.6.0",
     "framer-motion": "^11.2.10",
-    "isbot": "^5.1.9",
     "js-logger": "^1.6.1",
     "lucide-react": "^0.446.0",
-    "next-themes": "^0.3.0",
     "react": "^18.3.1",
     "react-chartjs-2": "^5.2.0",
     "react-day-picker": "^8.10.1",
     "react-dom": "^18.3.1",
     "react-use-measure": "^2.1.1",
-    "remix-auth": "^3.7.0",
-    "remix-auth-form": "^1.5.0",
     "short-uuid": "^5.2.0",
     "sonner": "^1.5.0",
     "swr": "^2.2.5",
     "tailwind-merge": "^2.5.2",
-    "tailwindcss-animate": "^1.0.7",
-    "uuid": "11.0.0-0"
+    "tailwindcss-animate": "^1.0.7"
+  },
+  "devDependencies": {
+    "@tanstack/router-devtools": "^1.58.3",
+    "@tanstack/router-plugin": "^1.58.3",
+    "@types/react": "^18.3.3",
+    "@types/react-dom": "^18.3.0",
+    "@vitejs/plugin-react": "^4.3.1",
+    "postcss": "^8.4.47",
+    "tailwindcss": "^3.4.12",
+    "vite": "^5.4.6",
+    "vite-plugin-top-level-await": "^1.4.4",
+    "vite-plugin-wasm": "^3.3.0",
+    "vite-tsconfig-paths": "^5.0.1"
   },
   "engines": {
     "node": ">=20.12.0",
