--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "goal-dashboard-server",
+  "name": "seon-server",
   "version": "1.0.0",
   "description": "",
   "main": "src/index.js",
