feat: specify multiple allowed origins as an array for cors

--- a/packages/server/.env.example
+++ b/packages/server/.env.example
@@ -19,5 +19,5 @@ JWT_DB_ACCESS_EXPIRATION="3600"
 
 SYNC_URL=
 
-# client url for CORS
-ORIGIN_URL=
+# allowed origins for CORS, comma separated string
+ORIGIN_URLS=
