feat: add CDN url env config

--- a/packages/web/.env.local.example
+++ b/packages/web/.env.local.example
@@ -2,6 +2,7 @@ VITE_SUPABASE_URL=
 VITE_SUPABASE_ANON_KEY=
 # api server url
 VITE_API_URL=
+VITE_CDN_URL=
 
 # development use
 VITE_POWERSYNC_URL=
