--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -23,6 +23,7 @@
     "@radix-ui/react-popover": "^1.0.7",
     "@radix-ui/react-select": "^2.0.0",
     "@radix-ui/react-slot": "^1.0.2",
+    "@radix-ui/react-tooltip": "^1.1.3",
     "@supabase/supabase-js": "^2.45.2",
     "@tanstack/react-form": "^0.34.0",
     "@tanstack/react-router": "^1.74.2",
