--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   },
   "dependencies": {
     "short-uuid": "^5.2.0",
-    "uuid": "11.0.0-0"
+    "uuid": "^11.0.2"
   },
   "devDependencies": {
     "@ianvs/prettier-plugin-sort-imports": "^4.3.1",
