--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -56,6 +56,7 @@
     "postcss": "^8.4.47",
     "tailwindcss": "^3.4.14",
     "vite": "^5.4.10",
+    "vite-plugin-pwa": "^0.21.0",
     "vite-plugin-top-level-await": "^1.4.4",
     "vite-plugin-wasm": "^3.3.0",
     "vite-tsconfig-paths": "^5.1.1"
