feat: add and configure lingui package for internationalization

--- a/packages/web/tsconfig.json
+++ b/packages/web/tsconfig.json
@@ -21,7 +21,8 @@
     "src/**/*",
     "postcss.config.js",
     "vite.config.ts",
-    "tailwind.config.ts"
+    "tailwind.config.ts",
+    "lingui.config.ts"
   ],
   "noEmit": true
 }
