--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -8,10 +8,15 @@
     "dev": "vite",
     "serve": "vite preview",
     "lint": "eslint --ignore-path .gitignore --cache --cache-location ./node_modules/.cache/eslint .",
-    "typecheck": "tsc"
+    "typecheck": "tsc",
+    "messages:extract": "lingui extract",
+    "messages:compile": "lingui compile --typescript"
   },
   "dependencies": {
     "@journeyapps/wa-sqlite": "^0.4.1",
+    "@lingui/core": "^4.14.0",
+    "@lingui/macro": "^4.14.0",
+    "@lingui/react": "^4.14.0",
     "@powersync/common": "^1.20.2",
     "@powersync/kysely-driver": "^1.0.0",
     "@powersync/react": "^1.5.0",
@@ -49,11 +54,15 @@
     "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
+    "@lingui/cli": "^4.14.0",
+    "@lingui/conf": "^4.14.0",
+    "@lingui/vite-plugin": "^4.14.0",
     "@tanstack/router-devtools": "^1.79.0",
     "@tanstack/router-plugin": "^1.79.0",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
     "@vitejs/plugin-react": "^4.3.3",
+    "babel-plugin-macros": "^3.1.0",
     "postcss": "^8.4.47",
     "tailwindcss": "^3.4.14",
     "vite": "^5.4.10",
