feat: dynamically import only the messages of the selected language

--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "@journeyapps/wa-sqlite": "^0.4.1",
     "@lingui/core": "^4.14.0",
+    "@lingui/detect-locale": "^4.14.0",
     "@lingui/macro": "^4.14.0",
     "@lingui/react": "^4.14.0",
     "@powersync/common": "^1.20.2",
