--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -8,10 +8,16 @@
     "dev": "vite",
     "serve": "vite preview",
     "lint": "eslint --ignore-path .gitignore --cache --cache-location ./node_modules/.cache/eslint .",
-    "typecheck": "tsc"
+    "typecheck": "tsc",
+    "messages:extract": "lingui extract",
+    "messages:compile": "lingui compile --typescript"
   },
   "dependencies": {
     "@journeyapps/wa-sqlite": "^1.1.1",
+    "@lingui/core": "^5.1.2",
+    "@lingui/detect-locale": "^5.1.2",
+    "@lingui/macro": "^5.1.2",
+    "@lingui/react": "^5.1.2",
     "@powersync/common": "^1.22.0",
     "@powersync/kysely-driver": "^1.1.0",
     "@powersync/react": "^1.5.1",
@@ -49,11 +55,15 @@
     "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
+    "@lingui/cli": "^5.1.2",
+    "@lingui/conf": "^5.1.2",
+    "@lingui/vite-plugin": "^5.1.2",
     "@tanstack/router-devtools": "^1.92.1",
     "@tanstack/router-plugin": "^1.91.1",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
     "@vitejs/plugin-react": "^4.3.3",
+    "babel-plugin-macros": "^3.1.0",
     "postcss": "^8.4.47",
     "tailwindcss": "^3.4.17",
     "vite": "^5.4.10",
