--- a/.prettierrc.json
+++ b/.prettierrc.json
@@ -5,10 +5,6 @@
     "prettier-plugin-tailwindcss"
   ],
   "importOrder": [
-    "<TYPES>^(node:)",
-    "<TYPES>",
-    "<TYPES>^[.]",
-    "",
     "^[react*]",
     "^[react*/**]",
     "<BUILT_IN_MODULES>",
@@ -20,5 +16,6 @@
     "^./(.*)$",
     "^../(.*)$",
     "./*.module.css"
-  ]
+  ],
+  "importOrderTypeScriptVersion": "5.7.2"
 }
