--- a/biome.json
+++ b/biome.json
@@ -1,6 +1,11 @@
 {
   "$schema": "https://biomejs.dev/schemas/1.9.4/schema.json",
-  "vcs": { "enabled": false, "clientKind": "git", "useIgnoreFile": false },
+  "vcs": {
+    "enabled": true,
+    "clientKind": "git",
+    "useIgnoreFile": true,
+    "defaultBranch": "develop"
+  },
   "files": { "ignoreUnknown": false, "ignore": [] },
   "formatter": {
     "enabled": true,
