--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "build": "vite build",
     "dev": "vite",
     "serve": "vite preview",
-    "lint": "eslint --ignore-path .gitignore --cache --cache-location ./node_modules/.cache/eslint .",
+    "ci:biome": "biome check --changed",
     "typecheck": "tsc"
   },
   "dependencies": {
