--- a/.github/workflows/lint-pr.yml
+++ b/.github/workflows/lint-pr.yml
@@ -1,37 +1,25 @@
-
-name: PR Lint and Prettier
+name: Code quality
 
 on:
   pull_request:
-    branches: [ "main", "develop" ]
+    branches: ['main', 'develop']
+    types:
+      - opened
+      - synchronize
 
 jobs:
-  lint:
+  test:
+    name: 'Run Biome'
     runs-on: ubuntu-latest
     steps:
       - name: Check out repository
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
         with:
           fetch-depth: 0
-      - name: Set up Node.js
-        uses: actions/setup-node@v3
+
+      - name: Setup Biome
+        uses: biomejs/setup-biome@v2
         with:
-          node-version: '20.12.0'
-      - name: Install dependencies
-        run: pnpm install
-      - name: Gather changed files
-        run: |
-          git diff --name-only origin/main...HEAD > changed_files.txt
-          cat changed_files.txt | grep -E '\.(js|ts|tsx|jsx)$' > js_changed_files.txt
-      - name: Lint changed files
-        if: success() && always()
-        run: |
-          if [ -s js_changed_files.txt ]; then
-            pnpm exec eslint --cache --cache-location ./node_modules/.cache/eslint $(cat js_changed_files.txt)
-          fi
-      - name: Prettier check
-        if: success() && always()
-        run: |
-          if [ -s js_changed_files.txt ]; then
-            pnpm exec prettier --check $(cat js_changed_files.txt)
-          fi
+          version: latest
+      - name: Run Biome
+        run: biome ci . --changed --no-errors-on-unmatched
