--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -47,6 +47,7 @@
     "react-chartjs-2": "^5.2.0",
     "react-day-picker": "^8.10.1",
     "react-dom": "^18.3.1",
+    "react-resize-detector": "^12.0.2",
     "react-use-measure": "^2.1.1",
     "short-uuid": "^5.2.0",
     "sonner": "^1.7.1",
