--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -54,7 +54,8 @@
     "sonner": "^1.7.1",
     "swr": "^2.2.5",
     "tailwind-merge": "^2.5.5",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "zustand": "^5.0.3"
   },
   "devDependencies": {
     "@lingui/cli": "^5.1.2",
