--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -18,6 +18,7 @@
     "@lingui/detect-locale": "^5.1.2",
     "@lingui/macro": "^5.1.2",
     "@lingui/react": "^5.1.2",
+    "@lukemorales/query-key-factory": "^1.3.4",
     "@powersync/common": "^1.22.2",
     "@powersync/kysely-driver": "^1.1.0",
     "@powersync/react": "^1.5.1",
@@ -62,6 +63,7 @@
     "@lingui/cli": "^5.1.2",
     "@lingui/conf": "^5.1.2",
     "@lingui/vite-plugin": "^5.1.2",
+    "@tanstack/react-query-devtools": "^5.64.2",
     "@tanstack/router-devtools": "^1.92.1",
     "@tanstack/router-plugin": "^1.91.1",
     "@types/react": "^18.3.3",
