--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -2,12 +2,15 @@
   "name": "seon-server",
   "version": "1.0.0",
   "description": "",
-  "main": "src/index.js",
+  "main": "src/index.ts",
   "type": "module",
   "scripts": {
-    "build": "tsc -p tsconfig.json",
+    "build": "wrangler deploy",
+    "dev": "wrangler dev src/index.ts",
+    "deploy": "wrangler deploy src/index.ts",
+    "build:local": "tsc -p tsconfig.json",
     "start": "node dist/index.js",
-    "dev": "NODE_ENV=development tsx --watch src/index.ts"
+    "dev:local": "NODE_ENV=development tsx --watch src/index.ts"
   },
   "keywords": [],
   "author": "",
@@ -17,12 +20,14 @@
     "@hono/typebox-validator": "^0.2.5",
     "@sinclair/typebox": "^0.33.17",
     "drizzle-orm": "^0.36.1",
-    "hono": "^4.6.9",
+    "hono": "^4.6.19",
     "jose": "^5.9.6",
     "postgres": "^3.4.5"
   },
   "devDependencies": {
     "@types/node": "^20.16.10",
+    "@cloudflare/workers-types": "^4.20240208.0",
+    "wrangler": "^3.28.1",
     "drizzle-kit": "^0.28.0",
     "tsx": "^4.19.2"
   },
