--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -5,12 +5,9 @@
   "main": "src/index.ts",
   "type": "module",
   "scripts": {
-    "build": "wrangler deploy",
-    "dev": "wrangler dev src/index.ts",
-    "deploy": "wrangler deploy src/index.ts",
-    "build:local": "tsc -p tsconfig.json",
+    "build": "tsc -p tsconfig.json",
     "start": "node dist/index.js",
-    "dev:local": "NODE_ENV=development tsx --watch src/index.ts"
+    "dev": "NODE_ENV=development tsx --watch src/index.ts"
   },
   "keywords": [],
   "author": "",
@@ -26,8 +23,6 @@
   },
   "devDependencies": {
     "@types/node": "^20.16.10",
-    "@cloudflare/workers-types": "^4.20240208.0",
-    "wrangler": "^3.28.1",
     "drizzle-kit": "^0.28.0",
     "tsx": "^4.19.2"
   },
