--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -76,7 +76,8 @@
     "vite-plugin-pwa": "^0.21.1",
     "vite-plugin-top-level-await": "^1.4.4",
     "vite-plugin-wasm": "^3.4.1",
-    "vite-tsconfig-paths": "^5.1.1"
+    "vite-tsconfig-paths": "^5.1.1",
+    "workbox-window": "^7.3.0"
   },
   "engines": {
     "node": ">=20.12.0",
