--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -7,7 +7,10 @@
   "scripts": {
     "build": "tsc -p tsconfig.json",
     "start": "node dist/index.js",
-    "dev": "NODE_ENV=development tsx --watch src/index.ts"
+    "dev": "NODE_ENV=development tsx --watch src/index.ts",
+    "test": "vitest run",
+    "test:watch": "vitest",
+    "test:coverage": "vitest run --coverage"
   },
   "keywords": [],
   "author": "",
@@ -24,7 +27,8 @@
   "devDependencies": {
     "@types/node": "^20.17.22",
     "drizzle-kit": "^0.30.5",
-    "tsx": "^4.19.3"
+    "tsx": "^4.19.3",
+    "vitest": "^3.0.7"
   },
   "engines": {
     "node": ">=20.12.0"
