--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -27,6 +27,7 @@
   },
   "devDependencies": {
     "@types/node": "^20.17.22",
+    "@vitest/coverage-v8": "^3.0.7",
     "drizzle-kit": "^0.30.5",
     "tsx": "^4.19.3",
     "vitest": "^3.0.7"
