--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -36,7 +36,7 @@
     "@radix-ui/react-slot": "^1.1.2",
     "@radix-ui/react-tooltip": "^1.1.8",
     "@supabase/supabase-js": "^2.49.1",
-    "@tanstack/react-form": "^0.43.2",
+    "@tanstack/react-form": "~0.42.1",
     "@tanstack/react-query": "^5.66.11",
     "@tanstack/react-router": "^1.112.0",
     "chart.js": "^4.4.8",
