feat: add integration tests

--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -11,7 +11,9 @@
     "lint": "biome check --write",
     "test": "vitest run",
     "test:watch": "vitest",
-    "test:coverage": "vitest run --coverage"
+    "test:coverage": "vitest run --coverage",
+    "test:integration": "vitest run --config vitest.integration.config.ts",
+    "test:integration:watch": "vitest --config vitest.integration.config.ts"
   },
   "keywords": [],
   "author": "",
