--- a/biome.json
+++ b/biome.json
@@ -11,7 +11,8 @@
     "ignore": [
       "packages/server/src/db/*",
       "**/routeTree.gen.ts",
-      "**/messages.ts"
+      "**/messages.ts",
+      "**/migrations/*"
     ]
   },
   "formatter": {
