--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -7,7 +7,7 @@
     "build": "vite build",
     "dev": "vite",
     "serve": "vite preview",
-    "lint": "eslint --ignore-path .gitignore --cache --cache-location ./node_modules/.cache/eslint .",
+    "lint": "biome check --write",
     "typecheck": "tsc",
     "messages:extract": "lingui extract",
     "messages:compile": "lingui compile --typescript"
