test: setup vitest

--- a/packages/web/tsconfig.json
+++ b/packages/web/tsconfig.json
@@ -5,7 +5,7 @@
     "target": "ESNext",
     "module": "ESNext",
     "moduleResolution": "Bundler",
-    "types": ["vite/client"],
+    "types": ["vite/client", "vitest/globals", "@testing-library/jest-dom"],
     "strict": true,
     "skipLibCheck": true,
     "jsx": "react-jsx",
