--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -10,7 +10,9 @@
     "lint": "biome check --write",
     "typecheck": "tsc",
     "messages:extract": "lingui extract",
-    "messages:compile": "lingui compile --typescript"
+    "messages:compile": "lingui compile --typescript",
+    "test": "vitest run",
+    "test:watch": "vitest"
   },
   "dependencies": {
     "@journeyapps/wa-sqlite": "^1.2.2",
@@ -66,18 +68,24 @@
     "@tanstack/react-query-devtools": "^5.72.2",
     "@tanstack/router-devtools": "^1.115.2",
     "@tanstack/router-plugin": "^1.115.2",
+    "@testing-library/dom": "^10.4.0",
+    "@testing-library/jest-dom": "^6.6.3",
+    "@testing-library/react": "^16.3.0",
+    "@testing-library/user-event": "^14.6.1",
     "@types/react": "^18.3.20",
     "@types/react-dom": "^18.3.6",
-    "@vitejs/plugin-react": "^4.3.4",
+    "@vitejs/plugin-react": "^4.4.0",
     "autoprefixer": "^10.4.21",
     "babel-plugin-macros": "^3.1.0",
+    "happy-dom": "^17.4.4",
     "postcss": "^8.5.3",
     "tailwindcss": "^3.4.17",
-    "vite": "^5.4.18",
-    "vite-plugin-pwa": "^0.21.2",
+    "vite": "^6.3.0",
+    "vite-plugin-pwa": "^1.0.0",
     "vite-plugin-top-level-await": "^1.5.0",
     "vite-plugin-wasm": "^3.4.1",
     "vite-tsconfig-paths": "^5.1.4",
+    "vitest": "^3.1.1",
     "workbox-window": "^7.3.0"
   },
   "engines": {
