test: configure custom render function, add unit tests

--- a/packages/web/tsconfig.json
+++ b/packages/web/tsconfig.json
@@ -21,7 +21,8 @@
     "postcss.config.js",
     "vite.config.ts",
     "tailwind.config.ts",
-    "lingui.config.ts"
+    "lingui.config.ts",
+    "tests/**/*"
   ],
   "noEmit": true
 }
