--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -65,6 +65,7 @@
     "@lingui/cli": "^5.3.0",
     "@lingui/conf": "^5.3.0",
     "@lingui/vite-plugin": "^5.3.0",
+    "@playwright/test": "^1.52.0",
     "@tanstack/react-query-devtools": "^5.72.2",
     "@tanstack/router-devtools": "^1.115.2",
     "@tanstack/router-plugin": "^1.115.2",
@@ -72,6 +73,7 @@
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.3.0",
     "@testing-library/user-event": "^14.6.1",
+    "@types/node": "^20.17.30",
     "@types/react": "^18.3.20",
     "@types/react-dom": "^18.3.6",
     "@vitejs/plugin-react": "^4.4.0",
