--- a/.gitignore
+++ b/.gitignore
@@ -14,6 +14,6 @@ coverage
 
 # Playwright
 /test-results/
-/playwright-report/
-/blob-report/
-/playwright/.cache/
+**/playwright-report/
+**/blob-report/
+**/playwright/.cache/
