--- a/.github/workflows/web-test.yml
+++ b/.github/workflows/web-test.yml
@@ -19,6 +19,8 @@ jobs:
     runs-on: ubuntu-latest
     timeout-minutes: 30
     environment: Test - seon-web
+    container:
+      image: mcr.microsoft.com/playwright:v1.52.0
     steps:
       - name: Check out repository
         uses: actions/checkout@v4
@@ -48,9 +50,6 @@ jobs:
 
       - name: Install dependencies
         run: pnpm install
-
-      - name: Install Playwright Browsers
-        run: pnpm --filter seon-web exec playwright install --with-deps
 
       - name: Build Web App
         run: pnpm --filter seon-web build
