ci: ci/cd orchestrator workflow

--- a/.github/workflows/web-e2e-test.yml
+++ b/.github/workflows/web-e2e-test.yml
@@ -1,16 +1,7 @@
 name: Web E2E Test
 
 on:
-  push:
-    branches:
-      - main
-    paths:
-      - 'packages/web/**'
-      - 'playwright.config.ts'
-      - '.github/workflows/web-deploy.yml'
-      - 'pnpm-workspace.yaml'
-      - 'package.json'
-      - 'pnpm-lock.yaml'
+  workflow_call:
   workflow_dispatch:
 
 jobs:
