--- a/.github/workflows/web-deploy.yml
+++ b/.github/workflows/web-deploy.yml
@@ -1,21 +1,13 @@
 name: Deploy Web
 
 on:
+  workflow_call:
   workflow_dispatch:
-
-  workflow_run:
-    workflows: ['Web E2E Test']
-    types:
-      - completed
-    branches:
-      - main
 
 jobs:
   deploy:
     name: Deploy to Cloudflare Pages & Create Release
     runs-on: ubuntu-latest
-    # Only run if the triggering E2E workflow was successful
-    if: github.event.workflow_run.conclusion == 'success'
 
     permissions:
       contents: write
