--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -24,6 +24,8 @@ jobs:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           create_annotated_tag: true
 
+      - run: echo "Changelog ${{ steps.tag_version.outputs.changelog }}"
+
       - name: Build Changelog
         id: build_changelog
         uses: mikepenz/release-changelog-builder-action@v4
@@ -31,6 +33,22 @@ jobs:
           fromTag: ${{ steps.tag_version.outputs.previous_tag }}
           toTag: ${{ steps.tag_version.outputs.new_tag }}
           token: ${{ secrets.GITHUB_TOKEN }}
+          configurationJson: |
+            {
+              "categories": [
+                { "title": "## Features", "labels": ["feat"] },
+                { "title": "## Bug Fixes", "labels": ["fix"] },
+                { "title": "## Performance Improvements", "labels": ["perf"] },
+                { "title": "## Code Refactoring", "labels": ["refactor"] },
+                { "title": "## Tests", "labels": ["test", "tests"] },
+                { "title": "## Build System", "labels": ["build"] },
+                { "title": "## Continuous Integration", "labels": ["ci"] },
+                { "title": "## Documentation", "labels": ["docs"] },
+                { "title": "## Styling", "labels": ["style"] },
+                { "title": "## Reverts", "labels": ["revert"] },
+                { "title": "## Other", "labels": ["chore", "other"] }
+              ]
+            }
 
       - name: Create GitHub Release
         uses: softprops/action-gh-release@v2
