--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -28,13 +28,15 @@ jobs:
 
       - name: Build Changelog
         id: build_changelog
-        uses: mikepenz/release-changelog-builder-action@v4
+        uses: mikepenz/release-changelog-builder-action@v5
         with:
           fromTag: ${{ steps.tag_version.outputs.previous_tag }}
           toTag: ${{ steps.tag_version.outputs.new_tag }}
           token: ${{ secrets.GITHUB_TOKEN }}
+          mode: 'HYBRID'
           configurationJson: |
             {
+              "template": "#{{CHANGELOG}}\n\n<details>\n<summary>Uncategorized</summary>\n\n#{{UNCATEGORIZED}}\n</details>",
               "categories": [
                 { "title": "## Features", "labels": ["feat"] },
                 { "title": "## Bug Fixes", "labels": ["fix"] },
@@ -47,8 +49,17 @@ jobs:
                 { "title": "## Styling", "labels": ["style"] },
                 { "title": "## Reverts", "labels": ["revert"] },
                 { "title": "## Other", "labels": ["chore", "other"] }
+              ],
+              "label_extractor": [
+                {
+                  "pattern": "^(build|chore|ci|docs|feat|fix|perf|refactor|revert|style|test){1}(\\([\\w\\-\\.]+\\))?(!)?: ([\\w ])+([\\s\\S]*)",
+                  "on_property": "title",
+                  "target": "$1"
+                }
               ]
             }
+
+      - run: echo "${{ steps.build_changelog.outputs.changelog }}"
 
       - name: Create GitHub Release
         uses: softprops/action-gh-release@v2
