--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -15,16 +15,16 @@
     "test:watch": "vitest"
   },
   "dependencies": {
-    "@journeyapps/wa-sqlite": "^1.2.2",
+    "@journeyapps/wa-sqlite": "^1.2.4",
     "@lingui/core": "^5.3.1",
     "@lingui/detect-locale": "^5.3.1",
     "@lingui/macro": "^5.3.1",
     "@lingui/react": "^5.3.1",
-    "@powersync/common": "^1.28.0",
+    "@powersync/common": "^1.29.0",
     "@powersync/kysely-driver": "^1.2.0",
     "@powersync/react": "^1.5.3",
     "@powersync/tanstack-react-query": "^0.0.21",
-    "@powersync/web": "^1.19.0",
+    "@powersync/web": "^1.20.0",
     "@radix-ui/react-alert-dialog": "^1.1.11",
     "@radix-ui/react-checkbox": "^1.2.3",
     "@radix-ui/react-collapsible": "^1.1.8",
@@ -39,8 +39,8 @@
     "@radix-ui/react-tooltip": "^1.2.4",
     "@supabase/supabase-js": "^2.49.4",
     "@tanstack/react-form": "~0.42.1",
-    "@tanstack/react-query": "^5.74.9",
-    "@tanstack/react-router": "^1.117.1",
+    "@tanstack/react-query": "^5.75.2",
+    "@tanstack/react-router": "^1.119.0",
     "chart.js": "^4.4.9",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
@@ -58,27 +58,28 @@
     "swr": "^2.3.3",
     "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7",
-    "zustand": "^5.0.3"
+    "vaul": "^1.1.2",
+    "zustand": "^5.0.4"
   },
   "devDependencies": {
     "@lingui/cli": "^5.3.1",
     "@lingui/conf": "^5.3.1",
     "@lingui/vite-plugin": "^5.3.1",
     "@playwright/test": "^1.52.0",
-    "@tanstack/react-query-devtools": "^5.74.9",
-    "@tanstack/router-devtools": "^1.117.1",
-    "@tanstack/router-plugin": "^1.117.2",
+    "@tanstack/react-query-devtools": "^5.75.2",
+    "@tanstack/router-devtools": "^1.119.1",
+    "@tanstack/router-plugin": "^1.119.0",
     "@testing-library/dom": "^10.4.0",
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.3.0",
     "@testing-library/user-event": "^14.6.1",
     "@types/node": "^20.17.32",
     "@types/react": "^18.3.20",
-    "@types/react-dom": "^18.3.6",
+    "@types/react-dom": "^18.3.7",
     "@vitejs/plugin-react": "^4.4.1",
     "autoprefixer": "^10.4.21",
     "babel-plugin-macros": "^3.1.0",
-    "happy-dom": "^17.4.4",
+    "happy-dom": "^17.4.6",
     "postcss": "^8.5.3",
     "tailwindcss": "^3.4.17",
     "vite": "^6.3.4",
