--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -37,6 +37,7 @@
     "@radix-ui/react-separator": "^1.1.6",
     "@radix-ui/react-slot": "^1.2.2",
     "@radix-ui/react-tooltip": "^1.2.6",
+    "@sentry/react": "^9.17.0",
     "@supabase/supabase-js": "^2.49.4",
     "@tanstack/react-form": "~0.42.1",
     "@tanstack/react-query": "^5.76.0",
