--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -67,6 +67,7 @@
     "@lingui/conf": "^5.3.1",
     "@lingui/vite-plugin": "^5.3.1",
     "@playwright/test": "^1.52.0",
+    "@sentry/vite-plugin": "^3.4.0",
     "@tanstack/react-query-devtools": "^5.76.0",
     "@tanstack/router-devtools": "^1.120.3",
     "@tanstack/router-plugin": "^1.120.3",
