--- a/packages/web/tsconfig.json
+++ b/packages/web/tsconfig.json
@@ -14,7 +14,8 @@
       "~/*": ["./src/*"],
       "~/components": ["./src/components"],
       "~/lib": ["./src/lib/*"]
-    }
+    },
+    "composite": true
   },
   "include": [
     "src/**/*",
