chore: migrate to tailwind v4

--- a/biome.json
+++ b/biome.json
@@ -13,7 +13,8 @@
       "!**/packages/server/src/db/**/*",
       "!**/routeTree.gen.ts",
       "!**/messages.ts",
-      "!**/migrations/**/*"
+      "!**/migrations/**/*",
+      "!**/tailwind.css"
     ]
   },
   "formatter": {
