--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -57,8 +57,7 @@
     "short-uuid": "^5.2.0",
     "sonner": "^1.7.4",
     "swr": "^2.3.6",
-    "tailwind-merge": "^2.6.0",
-    "tailwindcss-animate": "^1.0.7",
+    "tailwind-merge": "^3.3.1",
     "vaul": "^1.1.2",
     "zustand": "^5.0.8"
   },
@@ -68,6 +67,7 @@
     "@lingui/vite-plugin": "^5.4.1",
     "@playwright/test": "^1.55.0",
     "@sentry/vite-plugin": "^3.6.1",
+    "@tailwindcss/postcss": "^4.1.12",
     "@tanstack/react-query-devtools": "^5.85.5",
     "@tanstack/router-devtools": "^1.131.28",
     "@tanstack/router-plugin": "^1.131.28",
@@ -79,11 +79,11 @@
     "@types/react": "^18.3.24",
     "@types/react-dom": "^18.3.7",
     "@vitejs/plugin-react": "^4.7.0",
-    "autoprefixer": "^10.4.21",
     "babel-plugin-macros": "^3.1.0",
     "happy-dom": "^17.6.3",
     "postcss": "^8.5.6",
-    "tailwindcss": "^3.4.17",
+    "tailwindcss": "^4.1.12",
+    "tw-animate-css": "^1.3.7",
     "vite": "^7.1.3",
     "vite-plugin-pwa": "^1.0.3",
     "vite-plugin-top-level-await": "^1.6.0",
