build: set files to be included in ts output

--- a/packages/server/tsconfig.json
+++ b/packages/server/tsconfig.json
@@ -1,6 +1,7 @@
 {
   "extends": "../../tsconfig.json",
   "include": ["**/*.ts"],
+  "files": ["src/**/*.ts"],
   "compilerOptions": {
     "outDir": "dist",
     "target": "ESNext",
