chore: migrate to new tanstack router devtools

--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -1,6 +1,9 @@
 packages:
   - packages/*
+ignoredBuiltDependencies:
+  - '@sentry/cli'
 onlyBuiltDependencies:
   - '@journeyapps/wa-sqlite'
+  - '@tailwindcss/oxide'
   - '@swc/core'
   - esbuild
