ci: stop release if any steps fail, simplify conditional logic

--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -76,8 +76,11 @@ jobs:
   trigger-release:
     name: Trigger Release Creation
     needs: [filter-paths, trigger-e2e, trigger-deploy, trigger-server-deploy]
-    # Run if either web or server paths triggered a change, and preceding jobs succeeded/skipped appropriately
-    if: always() && (needs.filter-paths.outputs.web == 'true' || needs.filter-paths.outputs.server == 'true')
+    # Run if changes were detected and all required jobs succeeded (skipped jobs are OK)
+    if: >-
+      !cancelled() &&
+      (needs.filter-paths.outputs.web == 'true' || needs.filter-paths.outputs.server == 'true') &&
+      !contains(needs.*.result, 'failure')
     permissions:
       contents: write
     uses: ./.github/workflows/release.yml
