--- a/packages/web/tsconfig.json
+++ b/packages/web/tsconfig.json
@@ -12,9 +12,10 @@
     "baseUrl": ".",
     "paths": {
       "~/*": ["./src/*"],
-      "~/components/*": ["./src/components/*"],
-      "~/shared/*": ["./src/shared/*"],
-      "~/lib": ["./src/lib/*"]
+      "~/app/*": ["./src/app/*"],
+      "~/data/*": ["./src/data/*"],
+      "~/features/*": ["./src/features/*"],
+      "~/shared/*": ["./src/shared/*"]
     },
     "composite": true
   },
