--- a/package.json
+++ b/package.json
@@ -5,14 +5,14 @@
   "type": "module",
   "scripts": {
     "ci:biome": "biome check --changed",
-    "typecheck": "tsc"
+    "typecheck": "tsc -b"
   },
   "dependencies": {
     "short-uuid": "^5.2.0",
     "uuid": "^12.0.0"
   },
   "devDependencies": {
-    "@biomejs/biome": "2.3.0",
+    "@biomejs/biome": "2.3.8",
     "@ianvs/prettier-plugin-sort-imports": "^4.7.0",
     "prettier": "^3.7.4",
     "prettier-plugin-tailwindcss": "^0.7.2",
