--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "seon-server",
+  "name": "server",
   "description": "",
   "main": "src/index.ts",
   "type": "module",
@@ -7,6 +7,7 @@
     "build": "tsc -p tsconfig.json",
     "start": "node dist/src/index.js",
     "dev": "NODE_ENV=development tsx --watch src/index.ts",
+    "typecheck": "tsc --noEmit",
     "lint": "biome check --write",
     "test": "vitest run",
     "test:watch": "vitest",
@@ -20,19 +21,19 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@hono/node-server": "^1.19.6",
+    "@hono/node-server": "^1.19.7",
     "@hono/typebox-validator": "^0.3.3",
     "@sinclair/typebox": "^0.34.41",
     "drizzle-orm": "^0.44.7",
-    "hono": "^4.10.7",
+    "hono": "^4.10.8",
     "jose": "^6.1.3",
     "postgres": "^3.4.7"
   },
   "devDependencies": {
     "@electric-sql/pglite": "^0.3.14",
-    "@types/node": "^22.19.1",
+    "@types/node": "^22.19.2",
     "@vitest/coverage-v8": "^3.2.4",
-    "drizzle-kit": "^0.31.7",
+    "drizzle-kit": "^0.31.8",
     "tsx": "^4.21.0",
     "vitest": "^3.2.4"
   },
