--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "seon-web",
+  "name": "web",
   "sideEffects": false,
   "main": "src/main.js",
   "type": "module",
@@ -14,7 +14,7 @@
     "test:watch": "vitest"
   },
   "dependencies": {
-    "@journeyapps/wa-sqlite": "^1.3.4",
+    "@journeyapps/wa-sqlite": "^1.4.1",
     "@lingui/core": "^5.6.1",
     "@lingui/detect-locale": "^5.6.1",
     "@lingui/macro": "^5.6.1",
@@ -36,11 +36,11 @@
     "@radix-ui/react-separator": "^1.1.8",
     "@radix-ui/react-slot": "^1.2.4",
     "@radix-ui/react-tooltip": "^1.2.8",
-    "@sentry/react": "^10.28.0",
-    "@supabase/supabase-js": "^2.86.0",
-    "@tanstack/react-form": "^1.27.0",
-    "@tanstack/react-query": "^5.90.11",
-    "@tanstack/react-router": "^1.139.14",
+    "@sentry/react": "^10.30.0",
+    "@supabase/supabase-js": "^2.87.1",
+    "@tanstack/react-form": "^1.27.2",
+    "@tanstack/react-query": "^5.90.12",
+    "@tanstack/react-router": "^1.140.5",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
@@ -66,22 +66,22 @@
     "@sentry/vite-plugin": "^4.6.1",
     "@tailwindcss/postcss": "^4.1.17",
     "@tanstack/react-query-devtools": "^5.91.1",
-    "@tanstack/react-router-devtools": "^1.139.14",
-    "@tanstack/router-plugin": "^1.139.14",
+    "@tanstack/react-router-devtools": "^1.140.5",
+    "@tanstack/router-plugin": "^1.140.5",
     "@testing-library/dom": "^10.4.1",
     "@testing-library/jest-dom": "^6.9.1",
     "@testing-library/react": "^16.3.0",
     "@testing-library/user-event": "^14.6.1",
-    "@types/node": "^22.19.1",
+    "@types/node": "^22.19.2",
     "@types/react": "^18.3.27",
     "@types/react-dom": "^18.3.7",
-    "@vitejs/plugin-react": "^5.1.1",
+    "@vitejs/plugin-react": "^5.1.2",
     "babel-plugin-macros": "^3.1.0",
     "happy-dom": "^20.0.11",
     "postcss": "^8.5.6",
     "tailwindcss": "^4.1.17",
     "tw-animate-css": "^1.4.0",
-    "vite": "^7.2.6",
+    "vite": "^7.2.7",
     "vite-plugin-pwa": "^1.2.0",
     "vite-plugin-top-level-await": "^1.6.0",
     "vite-plugin-wasm": "^3.5.0",
